@@ -1,103 +1,180 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/scrollView1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
-    
-	<LinearLayout
-	    android:id="@+id/createcommands_Root"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:layout_marginLeft="10dip"
-	    android:layout_marginRight="10dip"
-	    android:minWidth="300dp"
-	    android:orientation="vertical"
-	    android:paddingLeft="10dip"
-	    android:paddingRight="10dip" >
-	
-	    <CheckBox
-	        android:id="@+id/createcommands_choice1"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:checked="true"
-	        android:text="Choice 1" />
-	
-			<EditText
-			    android:id="@+id/createcommands_command1"
-			    android:layout_width="fill_parent"
-			    android:layout_height="wrap_content"
-			    android:freezesText="true"
-			    android:inputType="textCapSentences"
-			    android:text="1st item"
-			    android:visibility="visible" >
-	
-			</EditText>
-	
-			<EditText
-			    android:id="@+id/createcommands_vr1"
-			    android:layout_width="fill_parent"
-			    android:layout_height="wrap_content"
-			    android:freezesText="true"
-			    android:hint="VR Synonym"
-			    android:inputType="textCapSentences"
-			    android:text="Command one"
-			    android:visibility="visible" />
-	
-			<CheckBox
-			    android:id="@+id/createcommands_choice2"
-			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content"
-			    android:checked="true"
-			    android:text="Choice 2" />
-	
-			<EditText
-			    android:id="@+id/createcommands_command2"
-			    android:layout_width="fill_parent"
-			    android:layout_height="wrap_content"
-			    android:freezesText="true"
-			    android:inputType="textCapSentences"
-			    android:text="2nd item"
-			    android:visibility="visible" >
-	
-			</EditText>
-	
-			<EditText
-			    android:id="@+id/createcommands_vr2"
-			    android:layout_width="fill_parent"
-			    android:layout_height="wrap_content"
-			    android:freezesText="true"
-			    android:hint="VR Synonym"
-			    android:inputType="textCapSentences"
-			    android:text="Command two"
-			    android:visibility="visible" />
-	
-			<CheckBox
-			    android:id="@+id/createcommands_choice3"
-			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content"
-			    android:checked="true"
-			    android:text="Choice 3" />
-	
-	        <EditText
-	            android:id="@+id/createcommands_command3"
-	            android:layout_width="fill_parent"
-	            android:layout_height="wrap_content"
-	            android:freezesText="true"
-	            android:inputType="textCapSentences"
-	            android:text="3rd item"
-	            android:visibility="visible" >
-	
-			</EditText>
-	
-	        <EditText
-	            android:id="@+id/createcommands_vr3"
-	            android:layout_width="fill_parent"
-	            android:layout_height="wrap_content"
-	            android:freezesText="true"
-	            android:hint="VR Synonym"
-	            android:inputType="textCapSentences"
-	            android:text="Command three"
-	            android:visibility="visible" />
-	
-	</LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/createcommands_Root"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dip"
+        android:layout_marginRight="10dip"
+        android:minWidth="300dp"
+        android:orientation="vertical"
+        android:paddingLeft="10dip"
+        android:paddingRight="10dip" >
+
+        <CheckBox
+            android:id="@+id/createcommands_choice1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="@string/createinteractionchoiceset_choice1" />
+
+        <EditText
+            android:id="@+id/createcommands_command1"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:freezesText="true"
+            android:inputType="textCapSentences"
+            android:text="@string/createinteractionchoiceset_choice1Default"
+            android:visibility="visible" >
+        </EditText>
+
+        <EditText
+            android:id="@+id/createcommands_vr1"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:freezesText="true"
+            android:hint="@string/createinteractionchoiceset_choiceVRSynonym"
+            android:inputType="textCapSentences"
+            android:text="@string/createinteractionchoiceset_choice1VRDefault"
+            android:visibility="visible" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <CheckBox
+                android:id="@+id/createinteractionchoiceset_image1Check"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:checked="true"
+                android:text="@string/createinteractionchoiceset_choiceUseImage" />
+
+            <Spinner
+                android:id="@+id/createinteractionchoiceset_image1Type"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+        <EditText
+            android:id="@+id/createinteractionchoiceset_image1Value"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="text"
+            android:text="@string/createinteractionchoiceset_choice1ImageValue" />
+
+        <CheckBox
+            android:id="@+id/createcommands_choice2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="@string/createinteractionchoiceset_choice2" />
+
+        <EditText
+            android:id="@+id/createcommands_command2"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:freezesText="true"
+            android:inputType="textCapSentences"
+            android:text="@string/createinteractionchoiceset_choice2Default"
+            android:visibility="visible" >
+        </EditText>
+
+        <EditText
+            android:id="@+id/createcommands_vr2"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:freezesText="true"
+            android:hint="@string/createinteractionchoiceset_choiceVRSynonym"
+            android:inputType="textCapSentences"
+            android:text="@string/createinteractionchoiceset_choice2VRDefault"
+            android:visibility="visible" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <CheckBox
+                android:id="@+id/createinteractionchoiceset_image2Check"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:checked="true"
+                android:text="@string/createinteractionchoiceset_choiceUseImage" />
+
+            <Spinner
+                android:id="@+id/createinteractionchoiceset_image2Type"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+        <EditText
+            android:id="@+id/createinteractionchoiceset_image2Value"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="text"
+            android:text="@string/createinteractionchoiceset_choice2ImageValue" />
+
+        <CheckBox
+            android:id="@+id/createcommands_choice3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="@string/createinteractionchoiceset_choice3" />
+
+        <EditText
+            android:id="@+id/createcommands_command3"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:freezesText="true"
+            android:inputType="textCapSentences"
+            android:text="@string/createinteractionchoiceset_choice3Default"
+            android:visibility="visible" >
+        </EditText>
+
+        <EditText
+            android:id="@+id/createcommands_vr3"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:freezesText="true"
+            android:hint="@string/createinteractionchoiceset_choiceVRSynonym"
+            android:inputType="textCapSentences"
+            android:text="@string/createinteractionchoiceset_choice3VRDefault"
+            android:visibility="visible" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <CheckBox
+                android:id="@+id/createinteractionchoiceset_image3Check"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:checked="true"
+                android:text="@string/createinteractionchoiceset_choiceUseImage" />
+
+            <Spinner
+                android:id="@+id/createinteractionchoiceset_image3Type"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+        <EditText
+            android:id="@+id/createinteractionchoiceset_image3Value"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="text"
+            android:text="@string/createinteractionchoiceset_choice3ImageValue" />
+    </LinearLayout>
+
 </ScrollView>
