@@ -77,5 +77,19 @@
     <string name="selectprotocol_autoReconnect">Auto reconnect</string>
     <string name="selectprotocol_extraOptions">Extra Options</string>
     <string name="selectprotocol_autoSetAppIcon">Set app icon after registration</string>
+    <string name="createinteractionchoiceset_choiceVRSynonym">VR Synonym</string>
+    <string name="createinteractionchoiceset_choiceUseImage">Use image:</string>
+    <string name="createinteractionchoiceset_choice1">Choice 1</string>
+    <string name="createinteractionchoiceset_choice1Default">1st item</string>
+    <string name="createinteractionchoiceset_choice1VRDefault">Command one</string>
+    <string name="createinteractionchoiceset_choice1ImageValue">turn_left.png</string>
+    <string name="createinteractionchoiceset_choice2">Choice 2</string>
+    <string name="createinteractionchoiceset_choice2Default">2nd item</string>
+    <string name="createinteractionchoiceset_choice2VRDefault">Command two</string>
+    <string name="createinteractionchoiceset_choice2ImageValue">turn_right.png</string>
+    <string name="createinteractionchoiceset_choice3">Choice 3</string>
+    <string name="createinteractionchoiceset_choice3Default">3rd item</string>
+    <string name="createinteractionchoiceset_choice3VRDefault">Command three</string>
+    <string name="createinteractionchoiceset_choice3ImageValue">turn_forward.png</string>
 
 </resources>
